# meme-gen

./: README.md  release_sample.keystore  settings.gradle.kts
.github/workflows/: android_release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/dalakoti07/android/memegenerator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nativefilters.cpp  nativefilters_halftone.cpp  nativefilters_oilpaint.cpp  nativefilters_sketch.cpp  nativefilters_watercolor.cpp
app/src/main/java/com/dalakoti07/android/memegenerator/: MainActivity.kt  MainViewModel.kt  UiAction.kt  UiStates.kt
app/src/main/java/com/dalakoti07/android/memegenerator/composables/: EditingTypes.kt  TextColorPicker.kt  UiActions.kt
app/src/main/java/com/dalakoti07/android/memegenerator/export/: Utils.kt
app/src/main/java/com/dalakoti07/android/memegenerator/home/: HomeScreen.kt  HomeScreenContent.kt
app/src/main/java/com/dalakoti07/android/memegenerator/home/composables/: Dialogs.kt  EditingOptions.kt  ImagePicker.kt  OverlayTexts.kt  TheCanvasArea.kt  Tints.kt
app/src/main/java/com/dalakoti07/android/memegenerator/nativefilters/: NativeFilters.kt
app/src/main/java/com/dalakoti07/android/memegenerator/utils/: FlowExt.kt
app/src/test/java/com/dalakoti07/android/memegenerator/: ExampleUnitTest.kt
benchmark/: build.gradle.kts
benchmark/src/main/java/com/dalakoti/android/benchmark/: ExampleStartupBenchmark.kt
fastlane/: Appfile  Fastfile
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
